--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,16 @@
   }
 }
 
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.home {
+  @apply bg-white flex justify-center items-center h-screen;
+}
+.square {
+  @apply hover:bg-gray-300 text-black font-bold py-2 px-4 rounded;
 }
