--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,6 @@ body {
 .square {
   @apply hover:bg-gray-300 text-black font-bold py-2 px-4 rounded;
 }
+.correctposition{
+  @apply bg-green-500 text-white font-bold py-2 px-4 rounded;
+}
