--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,9 +24,9 @@ body {
 .home {
   @apply bg-white flex justify-center items-center h-screen;
 }
-.square {
-  @apply hover:bg-gray-300 text-black font-bold py-2 px-4 rounded;
-}
 .correctposition{
   @apply bg-green-500 text-white font-bold py-2 px-4 rounded;
+}
+.btn{
+  @apply bg-purple-200 text-black font-normal py-2 px-4 rounded;
 }
