--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
 
 body {
   color: var(--foreground);
-  background: var(--background, rgb(87, 64, 124));
+  background-color: var(--background, rgb(87, 64, 124));
   opacity: 1;
   font-family: Arial, Helvetica, sans-serif;
 }
